# task-manager-api

./: .env.example  Cargo.toml  Dockerfile  compose.yaml
src/: main.rs  tasks.rs
src/tasks/: api_resources.rs  domain.rs
